--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
     "app": "app"
   },
   "scripts": {
-    "build-lib": "%npm_package_config_ng% build core && %npm_package_config_ng% build gapi && %npm_package_config_ng% build material-helpers",
-    "build": "node_modules\\.bin\\ng build --prod --progress=false --base-href=/%npm_package_config_app% %npm_package_config_app%",
-    "serve": "node_modules\\.bin\\ng serve %npm_package_config_app% --aot true --progress false --base-href /",
-    "build-DailySpendLimit": "npm run build --repo:app=DailySpendLimit",
-    "serve-dsl": "npm run serve --repo:app=DailySpendLimit"
+    "build-lib": "node_modules\\.bin\\ng build core && node_modules\\.bin\\ng build gapi && node_modules\\.bin\\ng build material-helpers",
+    "serve": "node_modules\\.bin\\ng serve %npm_package_config_app% --aot=true --progress=false --base-href=/",
+    "serve-dsl": "npm run serve --repo:app=DailySpendLimit",
+    "build": "node_modules\\.bin\\ng build %npm_package_config_app% --prod --progress=false --base-href=/%npm_package_config_app%",
+    "build-dsl": "npm run build --repo:app=DailySpendLimit"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.0.0",
-    "@angular/cdk": "^7.0.0",
+    "@angular/cdk": "^7.0.1",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
-    "@angular/material": "^7.0.0",
+    "@angular/material": "^7.0.1",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
@@ -37,11 +37,11 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "~7.0.1",
+    "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@types/node": "~8.9.4",
-    "ng-packagr": "^4.2.0",
+    "ng-packagr": "^4.4.0",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
