--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@angular/material": "^7.0.2",
     "@angular/platform-browser": "~7.0.1",
     "@angular/platform-browser-dynamic": "~7.0.1",
+    "@angular/pwa": "^0.10.4",
     "@angular/router": "~7.0.1",
+    "@angular/service-worker": "~7.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
