--- a/package.json
+++ b/package.json
@@ -29,24 +29,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.1",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "~7.0.1",
-    "@angular/compiler": "~7.0.1",
-    "@angular/core": "~7.0.1",
+    "@angular/animations": "~7.0.0",
+    "@angular/cdk": "~7.0.0",
+    "@angular/common": "~7.0.0",
+    "@angular/compiler": "~7.0.0",
+    "@angular/core": "~7.0.0",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "~7.0.1",
-    "@angular/http": "~7.0.1",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "~7.0.1",
-    "@angular/platform-browser-dynamic": "~7.0.1",
+    "@angular/forms": "~7.0.0",
+    "@angular/http": "~7.0.0",
+    "@angular/material": "~7.0.0",
+    "@angular/platform-browser": "~7.0.0",
+    "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/pwa": "^0.10.4",
-    "@angular/router": "~7.0.1",
-    "@angular/service-worker": "~7.0.1",
+    "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
-    "material-design-icons": "^3.0.1",
+    "material-icon-font": "^3.0.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.3.3",
     "typeface-great-vibes": "0.0.54",
@@ -55,9 +55,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.1",
-    "@angular/language-service": "~7.0.1",
+    "@angular/cli": "~7.0.5",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "ng-packagr": "^4.2.0",
@@ -65,6 +65,6 @@
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.6"
   }
 }
