--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
   "name": "repo",
   "version": "1.0.0",
-  "config": {
-    "app": "app"
-  },
   "scripts": {
-    "build-lib": "node_modules\\.bin\\ng build core && node_modules\\.bin\\ng build gapi && node_modules\\.bin\\ng build material-helpers",
-    "ngc": "node_modules\\.bin\\ng g component --project=%npm_package_config_app%",
-    "ngc-dsl": "npm run ngc --repo:app=DailySpendLimit",
-    "ngc-vtw": "npm run ngc --repo:app=VinesToWinesDM",
-    "ngm": "node_modules\\.bin\\ng g module --project=%npm_package_config_app% --module=App",
-    "ngm-dsl": "npm run ngm --repo:app=DailySpendLimit",
-    "ngm-vtw": "npm run ngm --repo:app=VinesToWinesDM",
-    "ngs": "node_modules\\.bin\\ng g service --project=%npm_package_config_app%",
-    "ngs-dsl": "npm run ngs --repo:app=DailySpendLimit",
-    "ngs-sc": "npm run ngs --repo:app=StavesChurch",
-    "ngs-vtw": "npm run ngs --repo:app=VinesToWinesDM",
-    "serve": "node_modules\\.bin\\ng serve %npm_package_config_app% --aot=true --progress=false --base-href=/",
-    "serve-dsl": "npm run serve --repo:app=DailySpendLimit",
-    "serve-sc": "npm run serve --repo:app=StavesChurch",
-    "serve-tk": "npm run serve --repo:app=TiffanysKitchen",
-    "serve-vtw": "npm run serve --repo:app=VinesToWinesDM",
-    "build-app": "node_modules\\.bin\\ng build %npm_package_config_app% --prod --noprogress --output-path=../%npm_package_config_app%/docs/ --base-href=/%npm_package_config_app%/ && copy ..\\%npm_package_config_app%\\docs\\index.html ..\\%npm_package_config_app%\\docs\\404.html",
-    "build-dsl": "npm run build-app --repo:app=DailySpendLimit",
-    "build-sc": "npm run build-app --repo:app=StavesChurch",
-    "build-tk": "npm run build-app --repo:app=TiffanysKitchen",
-    "build-vtw": "npm run build-app --repo:app=VinesToWinesDM"
+    "build-lib": "ng build core && ng build gapi && ng build material-helpers",
+    "ngc-dsl": "ng g component --project=DailySpendLimit --",
+    "ngc-vtw": "ng g component --project=VinesToWinesDM --",
+    "ngm-dsl": "ng g module --project=DailySpendLimit --",
+    "ngm-vtw": "ng g module --project=VinesToWinesDM --",
+    "ngs-dsl": "ng g service --project=DailySpendLimit --",
+    "ngs-sc":  "ng g service --project=StavesChurch --",
+    "ngs-vtw": "ng g service --project=VinesToWinesDM --",
+    "serve-dsl": "ng s --aot=true --progress=false --base-href=/ DailySpendLimit",
+    "serve-sc":  "ng s --aot=true --progress=false --base-href=/ StavesChurch",
+    "serve-tk":  "ng s --aot=true --progress=false --base-href=/ TiffanysKitchen",
+    "serve-vtw": "ng s --aot=true --progress=false --base-href=/ VinesToWinesDM",
+    "build-dsl": "ng b DailySpendLimit --prod --noprogress --output-path=../DailySpendLimit/docs/ --base-href=/DailySpendLimit/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
+    "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
+    "build-tk": "ng b TiffanysKitchen --prod --noprogress --output-path=../TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/ && copy ..\\TiffanysKitchen\\docs\\index.html ..\\TiffanysKitchen\\docs\\404.html",
+    "build-vtw": "ng b VinesToWinesDM --prod --noprogress --output-path=../VinesToWinesDM/docs/ --base-href=/VinesToWinesDM/ && copy ..\\VinesToWinesDM\\docs\\index.html ..\\VinesToWinesDM\\docs\\404.html"
   },
   "private": true,
   "dependencies": {
