--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "ngm-dsl": "ng g module --project=DailySpendLimit --",
     "ngm-vtw": "ng g module --project=VinesToWinesDM --",
     "ngs-dsl": "ng g service --project=DailySpendLimit --",
-    "ngs-sc":  "ng g service --project=StavesChurch --",
+    "ngs-sc": "ng g service --project=StavesChurch --",
     "ngs-vtw": "ng g service --project=VinesToWinesDM --",
-    "serve-dsl": "ng s --aot=true --progress=false --base-href=/ DailySpendLimit",
-    "serve-sc":  "ng s --aot=true --progress=false --base-href=/ StavesChurch",
-    "serve-tk":  "ng s --aot=true --progress=false --base-href=/ TiffanysKitchen",
-    "serve-vtw": "ng s --aot=true --progress=false --base-href=/ VinesToWinesDM",
+    "serve-dsl": "ng s DailySpendLimit --aot=true --progress=false --base-href=/",
+    "serve-sc": "ng s StavesChurch --aot=true --progress=false --base-href=/",
+    "serve-tk": "ng s TiffanysKitchen --aot=true --progress=false --base-href=/",
+    "serve-vtw": "ng s VinesToWinesDM --aot=true --progress=false --base-href=/",
     "build-dsl": "ng b DailySpendLimit --prod --noprogress --output-path=../DailySpendLimit/docs/ --base-href=/DailySpendLimit/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
     "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
     "build-tk": "ng b TiffanysKitchen --prod --noprogress --output-path=../TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/ && copy ..\\TiffanysKitchen\\docs\\index.html ..\\TiffanysKitchen\\docs\\404.html",
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "~7.0.5",
+    "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@types/node": "~8.9.4",
