--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "repo",
   "version": "1.0.0",
   "scripts": {
-    "build-lib": "ng build core && ng build gapi && ng build material-helpers",
-    "ngc-dsl": "ng g component --project=DailySpendLimit --spec=false --styleext=scss --",
-    "ngc-vtw": "ng g component --project=VinesToWinesDM --spec=false --styleext=scss --",
+    "build-lib": "ng build core && ng build gapi && ng build material-helpers && ng build material-cms",
+    "ngc-cms": "ng g component --project=material-cms --",
+    "ngc-dsl": "ng g component --project=DailySpendLimit --",
+    "ngc-vtw": "ng g component --project=VinesToWinesDM --",
     "ngm-dsl": "ng g module --project=DailySpendLimit --",
     "ngm-vtw": "ng g module --project=VinesToWinesDM --",
-    "ngs-dsl": "ng g service --project=DailySpendLimit --",
-    "ngs-sc": "ng g service --project=StavesChurch --",
-    "ngs-vtw": "ng g service --project=VinesToWinesDM --",
     "serve-dsl": "ng s DailySpendLimit --aot=true --progress=false --base-href=/",
     "serve-sc": "ng s StavesChurch --aot=true --progress=false --base-href=/",
     "serve-tk": "ng s TiffanysKitchen --aot=true --progress=false --base-href=/",
