--- a/angular.json
+++ b/angular.json
@@ -748,6 +748,124 @@
           }
         }
       }
+    },
+    "material-cms-view": {
+      "root": "projects/material-cms-view",
+      "sourceRoot": "projects/material-cms-view/src",
+      "projectType": "library",
+      "prefix": "cms",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss",
+          "spec": false
+        },
+        "@schematics/angular:class": {
+          "spec": false
+        },
+        "@schematics/angular:directive": {
+          "spec": false
+        },
+        "@schematics/angular:guard": {
+          "spec": false
+        },
+        "@schematics/angular:module": {
+          "spec": false
+        },
+        "@schematics/angular:pipe": {
+          "spec": false
+        },
+        "@schematics/angular:service": {
+          "spec": false
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/material-cms-view/tsconfig.lib.json",
+            "project": "projects/material-cms-view/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/material-cms-view/src/test.ts",
+            "tsConfig": "projects/material-cms-view/tsconfig.spec.json",
+            "karmaConfig": "projects/material-cms-view/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/material-cms-view/tsconfig.lib.json",
+              "projects/material-cms-view/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "material-cms-admin": {
+      "root": "projects/material-cms-admin",
+      "sourceRoot": "projects/material-cms-admin/src",
+      "projectType": "library",
+      "prefix": "cms",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss",
+          "spec": false
+        },
+        "@schematics/angular:class": {
+          "spec": false
+        },
+        "@schematics/angular:directive": {
+          "spec": false
+        },
+        "@schematics/angular:guard": {
+          "spec": false
+        },
+        "@schematics/angular:module": {
+          "spec": false
+        },
+        "@schematics/angular:pipe": {
+          "spec": false
+        },
+        "@schematics/angular:service": {
+          "spec": false
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/material-cms-admin/tsconfig.lib.json",
+            "project": "projects/material-cms-admin/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/material-cms-admin/src/test.ts",
+            "tsConfig": "projects/material-cms-admin/tsconfig.spec.json",
+            "karmaConfig": "projects/material-cms-admin/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/material-cms-admin/tsconfig.lib.json",
+              "projects/material-cms-admin/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "core"
