--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "repo",
   "version": "1.0.0",
   "scripts": {
-    "build-lib": "ng build core && ng build gapi && ng build material-helpers && ng build material-cms",
-    "ngc-cms": "ng g component --project=material-cms --",
+    "build-lib": "ng build core && ng build gapi && ng build material-helpers && ng build material-cms-view && ng build material-cms-admin",
+    "ngc-cms-a": "ng g component --project=material-cms-admin --",
+    "ngc-cms-v": "ng g component --project=material-cms-view --",
     "ngc-dsl": "ng g component --project=DailySpendLimit --",
     "ngc-vtw": "ng g component --project=VinesToWinesDM --",
     "ngm-dsl": "ng g module --project=DailySpendLimit --",
